--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ button{
 
 .main{
     width: 600px;
-    background-color: #fff;
+    /*background-color: #fff;*/
     box-shadow: rgba(0,0,0,0.1) 0 0 30px;
     margin: 2rem auto 4rem;
 }
@@ -55,6 +55,8 @@ button{
     padding: 0;
     margin: 0;
     list-style: none;
+    background-color: #e3e3e3;
+    overflow: hidden;
 }
 
 .todos li{
@@ -64,6 +66,13 @@ button{
     cursor: pointer;
     height: 60px;
     user-select: none;
+
+    animation-duration: 0.5s;
+}
+
+.todos li.animated span{
+    background-color: #73c272;
+    color: #ffffff;
 }
 
 .todos li[data-checked=true] span{
@@ -81,6 +90,7 @@ button{
     height: 60px;
     line-height: 60px;
     box-shadow: rgba(0,0,0,0.1) -5px 0 10px;
+    transition: background-color 0.8s;
 }
 
 .todos li.selected span{
